--- a/python/demo1.ipynb
+++ b/python/demo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrZMC+xoqi2Pnpegc2TFQH",
+      "authorship_tag": "ABX9TyPY0eGlumsMhazr/Nay7UYq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,25 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "tcJJrZNAsIMy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tJKW5bRzsIuD"
+      }
     },
     {
       "cell_type": "markdown",
