--- a/python/demo1.ipynb
+++ b/python/demo1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPY0eGlumsMhazr/Nay7UYq",
+      "authorship_tag": "ABX9TyP1Mn0BI2E3vYrzCjW2vNAh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "id": "4UGxx9hnlofc",
         "outputId": "68e9ebd0-1e2e-4b9b-d43f-0ed57b69b7fb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,6 +119,17 @@
       "metadata": {
         "id": "wy309-VGkIcs"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas"
+      ],
+      "metadata": {
+        "id": "UrQpiOrlspLS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
